# space_tw

./: .env  .gitignore  README.md  cartoes_validos.txt  db.sqlite3  pyproject.toml
.ipynb_checkpoints/: teste-checkpoint.ipynb
ecommerce/: settings.py  urls.py
login_user/config/: UserPassport.js
login_user/models/: User.js
login_user/routes/: UserRoutes.js
static/css/: main.css
static/images/Icons/: Cópia_de_segurança_de_login_icon.cdr  login_icon.cdr
static/js/: cart.js  checkout.js  menubar.js  requestUser.js  scrollShadow.js  user.js  verSenhaLogin.js
store/: forms.py  models.py  urls.py  utils.py  views.py
store/migrations/: 0003_product_link.py  0004_product_on_sale_product_space_type_alter_customer_id_and_more.py  0005_product_features.py  0006_alter_product_features.py  0007_product_available_from_product_available_to.py  0008_product_is_rented.py
store/templates/store/: about.html  auditorium_spaces.html  cart.html  checkout.html  create_room.html  finish.html  login.html  main.html  office_spaces.html  privacy_policy.html  register.html  search.html  shared_space.html  store.html  terms_of_service.html
store/templates/store/partials/: footer.html  head.html  header.html
store/templates/store/rooms/: auditorio_1.html  sala_1.html  sala_2.html  sala_3.html
